--- a/.github/workflows/pylint_models.yml
+++ b/.github/workflows/pylint_models.yml
@@ -20,4 +20,4 @@ jobs:
         pip install -r requirements-dev.txt
     - name: Check with Pylint
       run: |
-        pylint --fail-under=9 models
+        pylint --fail-under=9 app\models
