--- a/.github/workflows/pylint_app.yml
+++ b/.github/workflows/pylint_app.yml
@@ -1,4 +1,4 @@
-name: Pylint Models
+name: Pylint App
 
 on: [push]
 
@@ -7,7 +7,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11", ]
+        python-version: ["3.11", ]
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
@@ -17,7 +17,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
+        python -m pip install -r requirements.txt
+        python -m pip install pylint
     - name: Check with Pylint
       run: |
-        pylint --fail-under=9 app\models
+        pylint --fail-under=9 app\
