--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,6 +3,6 @@
 
 pylint==3.1.0
 radon==6.0.1
-mypy==1.8.0
-black==24.2.0
-types-pywin32~=306.0.0
+mypy==1.9.0
+black==24.3.0
+types-pywin32==306.0.0.20240331
